--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   },
   "dependencies": {
     "ws": "^7.3.0",
-    "ts-node": "^8.10.1"
-  },
-  "devDependencies": {
+    "ts-node": "^8.10.1",
     "@types/node": "^14.0.4",
     "@types/ws": "^7.2.4",
-    "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.3"
   }
